2004-07-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/matroska/matroska-demux.c: (gst_matroska_demux_class_init),
	(gst_matroska_demux_add_stream):
	* gst/matroska/matroska-mux.c: (gst_matroska_mux_class_init):
	  add debug categories

2004-07-16  Wim Taymans  <wim@fluendo.com>

	* ext/libpng/Makefile.am:
	* ext/libpng/gstpng.c: (plugin_init):
	* ext/libpng/gstpngdec.c: (user_error_fn), (user_warning_fn),
	(gst_pngdec_get_type), (gst_pngdec_base_init),
	(gst_pngdec_class_init), (gst_pngdec_sinklink), (gst_pngdec_init),
	(gst_pngdec_src_getcaps), (user_read_data), (gst_pngdec_chain):
	* ext/libpng/gstpngdec.h:
	Added png decoder.

2004-07-16  Julien MOUTTE  <julien@moutte.net>

	* sys/ximage/ximagesink.c: (gst_ximagesink_handle_xerror),
	(gst_ximagesink_check_xshm_calls), (gst_ximagesink_ximage_new),
	(gst_ximagesink_ximage_destroy), (gst_ximagesink_sink_link),
	(gst_ximagesink_chain), (gst_ximagesink_buffer_free),
	(gst_ximagesink_buffer_alloc):
	* sys/ximage/ximagesink.h:
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_check_xshm_calls),
	(gst_xvimagesink_xvimage_new), (gst_xvimagesink_xvimage_destroy),
	(gst_xvimagesink_chain), (gst_xvimagesink_buffer_free),
	(gst_xvimagesink_buffer_alloc):
	* sys/xvimage/xvimagesink.h: Getting the 2 video sinks synchronized
	again. Using internal data pointer of the x(v)image to store image's
	data to be coherent with the buffer alloc mechanism. Investigated the
	image destruction code to be sure that everything gets freed correctly.

2004-07-16  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/riff/riff-read.c:
	(gst_riff_read_strf_vids_with_data),
	(gst_riff_read_strf_auds_with_data):
	* gst/avi/gstavidemux.c: (gst_avi_demux_handle_src_query),
	(gst_avi_demux_add_stream), (gst_avi_demux_stream_header):
	Make sure we don't create 0 sized subbufers in riff-read.
	Signal the no more pads signal after reading the avi header.

2004-07-16  Wim Taymans  <wim@fluendo.com>
